chore(config): externalize CORS_ALLOWED_ORIGINS and wire it into SecurityConfig, application.properties, docker-compose and .env.example